Added code for math functions

--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="display">display!</div>
+        <div class="display">-------</div>
         <div class="buttons">
             <div class="numbers">
                 <div class="btnRow" id="numRow1">
-                    <div class="btn" id="7">7</div>
-                    <div class="btn" id="8">8</div>
-                    <div class="btn" id="9">9</div>
+                    <div class="btn num" id="7">7</div>
+                    <div class="btn num" id="8">8</div>
+                    <div class="btn num" id="9">9</div>
                 </div>
                 <div class="btnRow" id="NumRow2">
-                    <div class="btn" id="4">4</div>
-                    <div class="btn" id="5">5</div>
-                    <div class="btn" id="6">6</div>
+                    <div class="btn num" id="4">4</div>
+                    <div class="btn num" id="5">5</div>
+                    <div class="btn num" id="6">6</div>
                 </div>
                 <div class="btnRow" id="NumRow3">
-                    <div class="btn" id="1">1</div>
-                    <div class="btn" id="2">2</div>
-                    <div class="btn" id="3">3</div>
+                    <div class="btn num" id="1">1</div>
+                    <div class="btn num" id="2">2</div>
+                    <div class="btn num" id="3">3</div>
                 </div>
                 <div class="btnRow" id="NumRow4">
-                    <div class="btn" id=".">.</div>
-                    <div class="btn" id="0">0</div>
-                    <div class="btn" id="=">=</div>               
+                    <div class="btn num" id=".">.</div>
+                    <div class="btn num" id="0">0</div>
+                    <div class="btn op" id="=">=</div>               
                 </div>
             </div>
             <div class="operators">
@@ -38,12 +38,12 @@
                     <div class="btn" id="AC">AC</div>                   
                 </div>
                 <div class="btnRow" id="opRow2">
-                    <div class="btn" id="divi">&divide</div>
-                    <div class="btn" id="mult">x</div>                   
+                    <div class="btn op" id="divi">&divide</div>
+                    <div class="btn op" id="mult">x</div>                   
                 </div>
                 <div class="btnRow" id="opRow3">
-                    <div class="btn" id="addi">+</div>
-                    <div class="btn" id="subi">-</div>                   
+                    <div class="btn op" id="addi">+</div>
+                    <div class="btn op" id="subi">-</div>                   
                 </div>
             </div>
         </div>
