--- a/index.html
+++ b/index.html
@@ -29,24 +29,29 @@
                 <div class="btnRow" id="NumRow4">
                     <div class="btn num" id=".">.</div>
                     <div class="btn num" id="0">0</div>
-                    <div class="btn op" id="=">=</div>               
+                    <div class="btn eq" id="=">=</div>               
                 </div>
             </div>
             <div class="operators">
-                <div class="btnRow" id="opRow3">
+                <div class="btnRow" id="opRow1">
                     <div class="space"></div>
                     <div class="btn" id="AC">AC</div>                   
                 </div>
-                <div class="btnRow" id="opRow2">
-                    <div class="btn op" id="divi">&divide</div>
-                    <div class="btn op" id="mult">x</div>                   
-                </div>
-                <div class="btnRow" id="opRow3">
-                    <div class="btn op" id="addi">+</div>
-                    <div class="btn op" id="subi">-</div>                   
+                <div id="bottomOps">
+                    <div class="btnRow" id="opRow2">
+                        <div class="btn op" id="divi">&divide</div>
+                        <div class="btn op" id="mult">x</div>                   
+                    </div>
+                    <div class="btnRow" id="opRow3">
+                        <div class="btn op" id="addi">+</div>
+                        <div class="btn op" id="subi">-</div>                   
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="footer">
+        calculator font downloaded here: <a href="https://www.1001fonts.com/digital-7-font.html">1001fonts</a>
     </div>
     <script src="code.js"></script>
 </body>
