--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
         <div class="buttons">
             <div class="numbers">
                 <div class="btnRow" id="numRow1">
-                    <div class="btn num" id="7">7</div>
-                    <div class="btn num" id="8">8</div>
-                    <div class="btn num" id="9">9</div>
+                    <div class="btn num" id="seven">7</div>
+                    <div class="btn num" id="eight">8</div>
+                    <div class="btn num" id="nine">9</div>
                 </div>
                 <div class="btnRow" id="NumRow2">
-                    <div class="btn num" id="4">4</div>
-                    <div class="btn num" id="5">5</div>
-                    <div class="btn num" id="6">6</div>
+                    <div class="btn num" id="four">4</div>
+                    <div class="btn num" id="five">5</div>
+                    <div class="btn num" id="six">6</div>
                 </div>
                 <div class="btnRow" id="NumRow3">
-                    <div class="btn num" id="1">1</div>
-                    <div class="btn num" id="2">2</div>
-                    <div class="btn num" id="3">3</div>
+                    <div class="btn num" id="one">1</div>
+                    <div class="btn num" id="two">2</div>
+                    <div class="btn num" id="three">3</div>
                 </div>
                 <div class="btnRow" id="NumRow4">
-                    <div class="btn num" id=".">.</div>
-                    <div class="btn num" id="0">0</div>
-                    <div class="btn eq" id="=">=</div>               
+                    <div class="btn num" id="dot">.</div>
+                    <div class="btn num" id="zero">0</div>
+                    <div class="btn op eq" id="equals">=</div>               
                 </div>
             </div>
             <div class="operators">
