Added Logic for decimal places

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="btn num" id="three">3</div>
                 </div>
                 <div class="btnRow" id="NumRow4">
-                    <div class="btn num" id="dot">.</div>
+                    <div class="btn" id="dot">.</div>
                     <div class="btn num" id="zero">0</div>
                     <div class="btn op eq" id="equals">=</div>               
                 </div>
